# python-java-starterkits

./: .gitignore  .hs-toolsmith.json  Makefile  README.md  pyproject.toml
examples/: basic_usage.py
src/python_java_starterkits/: __init__.py  _utils.py  cli_to_scaffold_matching_pytho.py  exceptions.py  types.py
tests/: test_cli_to_scaffold_matching_pytho.py
